workshop04/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: wordpress
  labels:
    name: wordpress-svc
spec:
  selector:
    app: wordpress-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: wordpress
  labels:
    name: wordpress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-deployment
  template:
    metadata:
      labels:
        app: wordpress-deployment
    spec:
      containers:
      - name: wordpress-container
        imagePullPolicy: IfNotPresent
        image: wordpress:latest
        volumeMounts:
        - name: content-vol
          mountPath: /var/www/html
        ports:
        - containerPort: 80
      volumes:
      - name: content-vol
        persistentVolumeClaim:
          claimName: wordpress-pvc
---
