workshop04/wordpress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-ingress-netpol
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      role: mysql-db
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: wordpress
      - podSelector:
          matchLabels:
            app: wordpress-deployment
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-egress-netpol
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      role: wordpress-deployment
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: wordpress
      - podSelector:
          matchLabels:
            app: mysql-db
